--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "jsdom": "^20.0.3",
         "node-fetch": "^3.3.2",
-        "punycode": "^2.3.1"
+        "punycode": "^2.3.1",
+        "slugify": "^1.6.6"
     }
 }
